--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR UW26 66727694
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
@@ -15,6 +15,6 @@ POLITENESS = 0.5
 # Save file for progress
 SAVE = frontier.shelve
 
-# IMPORTANT: DO NOT CHANGE IT IF YOU HAVE NOT IMPLEMENTED MULTITHREADING.
-THREADCOUNT = 1
+# Multithreading implemented with per-domain politeness
+THREADCOUNT = 4
 
